--- a/css/styles.css
+++ b/css/styles.css
@@ -31,8 +31,13 @@
   background-image: url("../img/dinner2.jpg");
 }
 
-.jumbotron {}
-
-.stretch {
-  min-width: 50%
+.jumbotron1 {
+  text-align: center;
+  margin-bottom: 0px;
+  background-image: url(../img/foodsBg.jpg);
+  background-position: 0% 25%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+  text-shadow: black 0.3em 0.3em 0.3em;
 }
