adding social media images and modifications to jumbotron3 and jumbotron4

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,3 +41,23 @@
   color: white;
   text-shadow: black 0.3em 0.3em 0.3em;
 }
+
+.jumbotron3 {
+  text-align: center;
+  margin-bottom: 0px;
+  background-image: url(../img/subscribe.jpg);
+  background-position: 0% 25%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+  text-shadow: black 0.3em 0.3em 0.3em;
+}
+
+.jumbotron4 {
+  float: inherit;
+  text-align: center;
+  color: white;
+  font-family: sans-serif;
+  min-height: 50px;
+  background-color: #F15A29;
+}
